fixing overflow

--- a/site/src/scss/_partials/navigation.scss
+++ b/site/src/scss/_partials/navigation.scss
@@ -4,14 +4,12 @@
 
 .l-navigation > * {
   white-space: pre;
-}
-
-.l-navigation > * + * {
-  margin-left: 0.5rem;
+  padding: 5px 13px;
 }
 
 .navigation {
   list-style: none;
+  flex-wrap: wrap;
 }
 
 $footer-nav-breakpoint: 1000px;
