--- a/site/src/scss/_partials/site-head.scss
+++ b/site/src/scss/_partials/site-head.scss
@@ -16,8 +16,6 @@ $bp-site-head: 600px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 0;
-  margin: 0.5rem 0;
   flex-wrap: wrap;
 }
 
