--- a/site/src/scss/_partials/typography.scss
+++ b/site/src/scss/_partials/typography.scss
@@ -10,7 +10,13 @@ h4 {
   font-family: $FONT_HEADINGS;
   font-weight: 700;
   hyphens: none;
+  font-variation-settings: "wght" 850, "wdth" 100, "ital" 1;
 }
+
+body {
+  font-variation-settings: "GRAD" 99;
+}
+
 .h1,
 h1 {
   font-size: $SCALE-4;
